labs/storage-file/resources/httpd/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: httpd
