labs/storage-file/resources/httpd/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: image-processing
spec:
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
